...


<!--            category #3-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Programming"
                android:textSize="20sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
...
