<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.ecomarket.activities.signUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/profileImage"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_baseline_account_circle_24"
                android:contentDescription="userImage" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                android:id="@+id/compare"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_baseline_account_circle_24"
                android:contentDescription="userImage" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"

            android:orientation="vertical">

            <EditText
                android:id="@+id/userName"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/full_name"
                android:hint="@string/full_name"
                android:inputType="textCapWords"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/userMail"
                android:autofillHints="@string/userMail"
                android:id="@+id/userMail"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                android:gravity="center_horizontal" />



            <EditText
                android:layout_width="280dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:id="@+id/createdPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/create_password"
                android:autofillHints="@string/create_password"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="280dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:id="@+id/confirmedPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password"
                android:autofillHints="@string/confirm_password"
                android:gravity="center_horizontal" />
            <!--        <RelativeLayout-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_marginHorizontal="8dp"-->
            <!--            android:layout_height="match_parent">-->
            <!--        <RadioGroup-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_marginTop="20dp"-->
            <!--            android:layout_marginHorizontal="10dp"-->
            <!--            android:id="@+id/category"-->
            <!--            android:layout_height="wrap_content">-->

            <!--    <RadioButton-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:id="@+id/teacherOpt"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="Librarian"/>-->
            <!--    <RadioButton-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_marginLeft="40dp"-->
            <!--        android:layout_marginTop="-32dp"-->

            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="Student"-->
            <!--        android:layout_marginStart="140dp"-->
            <!--        />-->
            <!--        </RadioGroup>-->
            <!--</RelativeLayout>-->



            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sProgressBar"
                android:visibility="invisible"
                android:layout_marginTop="30dp"/>




            <Button
                android:layout_width="280dp"
                android:id="@+id/signUpBtn"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:id="@+id/logInBtn"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>